applications/scratch/grpc-example/k8s/service-go.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-go
  labels:
    app: grpc-go
    app.kubernetes.io/name: grpc-go
    app.kubernetes.io/part-of: grpc-example
spec:
  type: ClusterIP
  selector:
    app: grpc-go
  ports:
    - name: grpc
      port: 50051
      targetPort: grpc
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
